--- a/app/src/main/res/layout/master_list_item_layout.xml
+++ b/app/src/main/res/layout/master_list_item_layout.xml
@@ -35,8 +35,25 @@
                 android:textColor="#000000"
                 android:textSize="22sp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/place_thumbnail"
-                tools:text="Nutella Pie" />
+                android:layout_below="@id/place_thumbnail" />
+
+            <TextView
+                android:id="@+id/place_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/place_title" />
+
+            <TextView
+                android:id="@+id/place_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/place_type" />
 
         </RelativeLayout>
 
