--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -15,7 +15,7 @@
         android:background="?android:selectableItemBackground">
 
         <TextView
-            android:id="@+id/place_title_textView"
+            android:id="@+id/place_title"
             android:gravity="center"
             android:textColor="#000000"
             android:textSize="22sp"
