--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -14,15 +14,29 @@
         android:layout_marginBottom="14dp"
         android:background="?android:selectableItemBackground">
 
-        <TextView
-            android:id="@+id/place_title"
-            android:gravity="center"
-            android:textColor="#000000"
-            android:textSize="22sp"
-            android:padding="4dp"
-            android:background="?android:selectableItemBackground"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/place_title"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="22sp"
+                android:padding="4dp"
+                android:background="?android:selectableItemBackground"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/place_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:adjustViewBounds="true"
+                android:layout_below="@id/place_title" />
+
+        </RelativeLayout>
 
 
     </android.support.v7.widget.CardView>
