--- a/app/src/main/res/layout/master_list_item_layout.xml
+++ b/app/src/main/res/layout/master_list_item_layout.xml
@@ -38,13 +38,33 @@
                 android:layout_below="@id/place_thumbnail" />
 
             <TextView
+                android:id="@+id/place_type_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_type_label"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/place_title" />
+
+            <TextView
                 android:id="@+id/place_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:textSize="14sp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/place_title" />
+                android:layout_below="@id/place_type_label" />
+
+            <TextView
+                android:id="@+id/place_rating_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/place_rating_label"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/place_type" />
 
             <TextView
                 android:id="@+id/place_rating"
@@ -53,7 +73,7 @@
                 android:textColor="#000000"
                 android:textSize="14sp"
                 android:layout_centerHorizontal="true"
-                android:layout_below="@id/place_type" />
+                android:layout_below="@id/place_rating_label" />
 
         </RelativeLayout>
 
