saving favorites to the database, added widget to the menu - widget feature still a work in progress

--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -36,6 +36,21 @@
                 android:adjustViewBounds="true"
                 android:layout_below="@id/place_title" />
 
+            <Button
+                android:id="@+id/fav_button"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/mark_favorite"
+                android:layout_below="@id/place_image" />
+
+            <Button
+                android:id="@+id/un_fav_button"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/un_mark_favorite"
+                android:visibility="gone"
+                android:layout_below="@id/place_image" />
+
         </RelativeLayout>
 
 
