--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -41,7 +41,9 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="@string/mark_favorite"
-                android:layout_below="@id/place_image" />
+                android:layout_centerInParent="true"
+                android:layout_below="@id/place_image"
+                style="@style/Widget.AppCompat.Button.Colored" />
 
             <Button
                 android:id="@+id/un_fav_button"
@@ -49,7 +51,9 @@
                 android:layout_width="wrap_content"
                 android:text="@string/un_mark_favorite"
                 android:visibility="gone"
-                android:layout_below="@id/place_image" />
+                android:layout_centerInParent="true"
+                android:layout_below="@id/place_image"
+                style="@style/Widget.AppCompat.Button.Colored" />
 
         </RelativeLayout>
 
