--- a/app/src/main/res/layout/widget_list_view_item.xml
+++ b/app/src/main/res/layout/widget_list_view_item.xml
@@ -8,12 +8,11 @@
 
     <TextView
         android:id="@+id/widget_list_view_text_rating"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:textColor="#000000"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:text="Ingredient" />
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/widget_list_view_text_type"
